--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.26.0",
     "@hookform/resolvers": "^5.2.0",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -47,6 +48,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
