--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 DATABASE_URL=
+
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/onboarding/set-role
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding/set-role
