--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.26.0",
     "@hookform/resolvers": "^5.2.0",
     "@prisma/client": "^6.12.0",
