--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_URL=
 
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/onboarding/set-role
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding/set-role
+
+CLERK_WEBHOOK_SECRET_KEY =
