Update environment configuration and enhance middleware for role-based access control
- Added NEXT_PUBLIC_URL to .env.example for local development.
- Improved middleware to handle public and protected routes more robustly, ensuring proper redirection for unauthenticated users and role-specific access.
- Updated vendor onboarding logic to enforce role checks and redirect users based on their profile completeness.
- Enhanced error handling in the vendor dashboard and pools pages to ensure cookies are forwarded correctly for API requests.

This commit lays the groundwork for a more secure and user-friendly experience in the vendor and supplier workflows.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/onboarding/set-role
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding/set-role
 
 CLERK_WEBHOOK_SECRET_KEY =
+
+NEXT_PUBLIC_URL=http://localhost:3000
